# adaptive-trail-simulator

./: .env.example  .gitignore  README.md  context.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml.disabled
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  llm_config.py  schemas.py  tools.py
backend/app/api/: endpoints.py  history_endpoints.py
backend/app/core/: database.py  models.py
backend/app/engine/: cohorts.py  stats.py
backend/tests/: conftest.py  test_agent.py  test_engine.py  test_stats.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: TrialConfigForm.jsx  TrialHistory.jsx
